test/sema/exercise/struct_instantiation_invalid_initializer_expression.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

struct S2 {}

fn main(): unit {
  S { x: S2 {} };
  // CHECK: [[# @LINE - 1 ]]:13: error: cannot unify 'S2' with 'number'
  // CHECK: [[# @LINE - 2 ]]:5: error: field 'x' is not initialized
}
